[package]
name = "u2f"
version = "0.1.1"
authors = ["Flavio Oliveira <rusty@wisespace.io>"]

description = "Rust FIDO U2F Library"
license = "MIT OR Apache-2.0"
keywords = ["authentication", "encryption", "U2F", "2fa"]
categories = ["authentication"]
repository = "https://github.com/wisespace-io/u2f-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/u2f-rs" }

[lib]
name = "u2f"
path = "src/lib.rs"

[dependencies]
time = "0.1.38"
bytes = "0.4.5"
base64 = "^0.5"
chrono = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
byteorder = "1.1.0"
ring = "0.11.0"
webpki = "0.16.0"
untrusted = "0.5.1"