[package]
name = "u2f-app"
version = "0.1.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]

[dependencies]
u2f = { path = "../" }
rocket_codegen = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket]
version = "0.3.2"
features = ["tls"]

[dependencies.rocket_contrib]
version = "0.3.2"
default-features = false
features = ["json"]