[package]
name = "u2f-app"
version = "0.1.4"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]
edition = "2018"

[dependencies]
u2f = { path = "../" }
serde = "1.0.11"
serde_json = "1.0.2"
lazy_static = "0.2"

[dependencies.rocket]
version = "0.4.0"
features = ["tls"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
